skin/frontend/enterprise/default/css/styles.css
/* ... */
.header .quick-access .links { float:right; line-height:18px; white-space:nowrap; }
.header .quick-access .links li { /* float:left; line-height:18px; */ padding:0 7px 0 4px; background:url(../images/bkg_sep.gif) no-repeat 100% 4px; }
.header .quick-access .links li a { color:#1e75b4; text-transform:uppercase; text-decoration:none;  } 
.header .quick-access .links li a:hover { color:#d33911; } 
.header .quick-access .checkout-link li { font-weight:bold; padding:0 0 0 12px; background-position:6px 4px; } 

#invitation-send-link { background:url(../images/bkg_sep.gif) no-repeat 100% 50%; padding:0 6px 0 0px; margin:0 4px 0 0; font-weight:bold; }
#invitation-send-link a { background:url(../images/bkg_invitation-link.gif) no-repeat 3px 6px; padding-left:23px; display:inline-block; }

.header-panel { text-align:center;  z-index:994; background:#fff url(../images/bkg_header-panel-bg.gif) repeat-x 0 100%; /* border-bottom:1px solid #c8c8c8; */ /* height:28px; */ line-height:28px; padding:0 0 0 11px; }
.header-panel .welcome-msg { font-weight:bold; display:inline; float:left; line-height:28px; margin-right:5px; }
.header-panel .links { float:left; line-height:28px; margin-right:11px; white-space:nowrap; }
.header-panel .links li a { color:#1e75b4; }
.header-panel .links li a:hover { color:#d33911; }

.switches { float:right; background:#fff url(../images/bkg_header-panel-bg.gif) repeat-x 0 100%; padding:0 0 1px 0; }

.switch { line-height:28px;  margin-left:-1px; margin-right:11px; display:inline; float:left; background:url(../images/bkg_header-panel.gif) no-repeat 0 -29px; padding-left:13px; }
.switch label { font-weight:normal; margin-right:0; float:left; }
.switch .switch-wrapper { float:left; position:relative; z-index:1; padding-left:7px; }
.switch strong.current { font-weight:normal; }
.switch .separator { margin:0 2px; font-size:10px; color:#8f8f8f; }
.switch .switcher { color:#1e75b4; cursor:pointer; background:url(../images/bkg_header-panel.gif) no-repeat 100% -73px; padding:0 10px 0 0; margin:0 3px 0 1px; }
.switch ul { position:absolute; min-width:110%; text-align:left; top:0; left:0px; float:left; line-height:16px; padding:0 0 0 0; border-top:0; }
.switch ul li { vertical-align:top; display:block; white-space:nowrap; border:1px solid #c8c8c8; border-top:0; }
.switch ul li a { white-space:nowrap; display:block; background:#f2f2f2; padding:4px 6px;  color:#1e75b4; text-decoration:none; }
.switch ul li a:hover { color:#d33911; background:#f8f8f8; }
.switch ul .current { line-height:28px; border:0; cursor:default; padding:0 7px; visibility:hidden; /* background:url(../images/bkg_header-panel.gif) repeat-x 0 0; */ }
.switch ul .current span { padding-right:20px; background:url(../images/bkg_close.gif) no-repeat 100% 1px; }
.switch .faded { color:#8f8f8f; }
.switch .faded li { border-color:#e6e6e6; background-color:#f6f6f6; }
.switch .faded  a { color:#9ac1dd; }

.list-opened { background-position:100% -129px !important; color:#d33911 !important; }

.header .form-search { float:right; clear:right; padding:5px 0 0; white-space:nowrap; }
.header .form-search label { display:none; }
.header .form-search input.input-text { background:#fff url(../images/bkg_search-input.gif) no-repeat 0 0; padding-left:23px; width:185px; }
.header .form-search a { display:none; }
.header .form-search button.button { margin:0 0 0 2px; }
.header .form-search .search-autocomplete { z-index:999; position:relative!important; top:0!important; left:0!important; height:0!important; overflow:visible!important; }
.header .form-search .search-autocomplete ul { border:1px solid #c7c7c7; border-top:0; padding-left:0; width:190px; background-color:#fcf8f4; position:absolute; top:-1px; left:20px; }
.header .form-search .search-autocomplete li { padding:4px 6px 4px 6px; border-bottom:1px solid #fff; font-size:12px; cursor:pointer; }
.header .form-search .search-autocomplete li .amount { float:right; font-weight:bold; }
.header .form-search .search-autocomplete li.selected {}
.header .form-search .search-autocomplete li.last { border-bottom:0; }

/********** < Navigation */
.nav-container { background:url(../images/bkg_nav.gif) 0 100% no-repeat; padding-bottom:3px; margin-bottom:-1px; position:relative; z-index:4; }
#nav { min-height:28px; background:#dedede url(../images/bkg_nav.gif) 0 0 no-repeat; text-align:left; /* height:31px; */ overflow:visible; padding:0 4px 0px; width:932px; }

/* All Levels */
#nav li { position:relative; z-index:4; }
#nav li.active { z-index:5; }
#nav li.over { z-index:990; }
/*#nav li.parent {}*/
#nav li a { text-decoration:none; }
#nav li a:hover { text-decoration:none; }
#nav li a span { display:block; white-space:nowrap; cursor:pointer; }
#nav li ul a span { white-space:normal; }

/* 1st Level */
#nav li { margin:0; padding:0 0 0 0; height:28px; float:left; }
#nav li a { float:left; height:28px; line-height:28px; border-top:1px solid #c0c0c0; padding:0 0 0 17px; } 
#nav li a,
#nav li a span { background:url(../images/bkg_nav-item-border.gif) no-repeat 100% 0; } 
#nav li.first a { border-left:0; padding-left:17px; } 
#nav li.last a { /* border-right:0;  */} 
#nav li a span { font-weight:bold; padding:0 19px 0 0; float:left; }
#nav li a { color:#333; font-size:13px; }
#nav li a:hover { background-position:0 -60px; margin-left:-1px; height:29px; border:0; overflow:hidden; padding:0 0 0 18px; }
#nav li a:hover span { background-position:100% -60px; padding:2px 19px 0 0; }
#nav li.over a,
#nav li.active a {  background-position:0 -60px; margin-left:-1px; height:29px; border:0; overflow:hidden; padding:0 0 0 18px; }
#nav li.over a span,
#nav li.active a span { background-position:100% -60px; padding:1px 19px 0 0; }

#nav li.over a { position:relative; z-index:2; line-height:30px; height:31px; }
#nav li.over a span { padding:1px 19px 0 0; }
/* ... */

